--- a/HackerRankGroovy/gradle.properties
+++ b/HackerRankGroovy/gradle.properties
@@ -1,2 +1,2 @@
-groovyVersion = 2.5.6
-org.gradle.jvmargs=-Xmx2g -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+groovyVersion = 4.0.23
+org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
