--- a/HackerRankGroovy/build.gradle
+++ b/HackerRankGroovy/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = 17
-    targetCompatibility = 17
+    sourceCompatibility = 21
+    targetCompatibility = 21
 }
 
 repositories {  mavenCentral()  }
@@ -14,8 +14,8 @@ dependencies {
 
     testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     testRuntimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.8'
-    implementation group: 'org.codehaus.groovy', name: 'groovy', version: groovyVersion
-    testImplementation group: 'org.codehaus.groovy', name: 'groovy-nio', version: groovyVersion
+    implementation group: 'org.apache.groovy', name: 'groovy', version: groovyVersion
+    testImplementation group: 'org.apache.groovy', name: 'groovy-nio', version: groovyVersion
 
     testImplementation 'junit:junit:4.13.1'
 }
