Corrected package names; got rid of sourceCompatibity

--- a/HackerRankGroovy/build.gradle
+++ b/HackerRankGroovy/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = 21
-    targetCompatibility = 21
+    //sourceCompatibility = 17
+    //targetCompatibility = 21
 }
 
 repositories {  mavenCentral()  }
